syntax = "proto3";

package lynx.protobuf.plugin.token.conf;

option go_package = "github.com/go-lynx/lynx/plugin/token/conf";

message token {
  string file_name = 1;
  string group = 2;
}